--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
   <input type="text" id="message" placeholder="type your message">
   <button id="send">send</button>
   <script src="sketch.js"></script>
+  <li class="chat Area">
+    <ul class="messages"></ul>
+    </div>
+  </li>
 
 
 </body>
