--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="p5.js"></script>
   <script src="p5.sound.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -15,7 +16,7 @@
   <input type="text" id="message" placeholder="type your message">
   <button id="send">send</button>
   <script src="sketch.js"></script>
-  <li class="chat Area">
+  <li class="chatArea">
     <ul class="messages"></ul>
     </div>
   </li>
