--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,8 @@
           <rect class="cls-1" width="1374" height="423" />
         </clipPath>
       </defs>
-      <path id="st0"
+      <path class="st0"
         d="M-.42,426.66c77-6,146.91-25.47,219.42-54.5,42.07-16.84,137.6-26.34,182-27.24,46.8-.95,92.59,21.95,139,28.25,49.29,6.69,80.44-14.27,130-19.17,1.49,1.54-2.23,1.15,0,0,106.64-55.24,196.6-94.57,312.51-90.82,28.38.91,56.47,4.49,84.7,7.77,26.19,3,53.61,4.74,79-5.18,50-19.51,69.07-80.49,98.17-127.34,33-53.17,79.25-94,130.9-116.43q-1.4,170,.48,339.93c.35,30.82-2.28,30.25-1.78,61.07"
-        transform="translate(0.42 -22)" />
-      <path id="st1"
-        d="M1,404.4c77-6,126.8-37.8,199.3-66.8c42.1-16.8,158,24.5,202.4,23.6c46.8-1,88.6-14.8,134.4-28.1c50.1 - 15.1, 82.3 - 31.1, 131.5 - 26.6c1.5, 1.5 - 2.2, 1.2, 0, 0c104.9 - 25.1, 159.5 - 1.5, 281.1 - 23.2c28.4, 0.9, 70.1 - 14.5, 101.3 - 35.6c24.5 - 14.5, 61.4 - 33.5, 86.8 - 43.4c50 - 19.5, 102.3 - 1, 131.4 - 47.9c33 - 53.2, 55.9 - 134.3, 107.6 - 156.7c - 0.9, 113.3 - 0.8, 226.6, 0.5, 339.9"
         transform="translate(0.42 -22)" />
       </svg>
     </div>
