--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <script src="snap.svg-min.js"></script>
   <script src="sketch.js"></script>
   <div class="fixed">
-    <div class="butoons">
+    <div class="buttons">
       <input type="text" id="message" placeholder="type your message">
       <button id="send">send</button>
     </div>
