--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,9 @@
 
   <div class="main">
     <li class="chatArea">
-      <ul class="messages"></ul>
+      <div class="bc">
+        <ul class="messages"></ul>
+      </div>
     </li>
     <div id="myfe"></div>
   </div>
