--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
 
   <div class="fixed">
     <div class="buttons">
+      <p id="mynameArea">　</p>
       <input type="text" id="message" placeholder="type your message">
       <button id="send">send</button>
     </div>
