--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,8 @@
           <p class="hsl_str">輝度
             <input type="range" id="lig" value="80" min="1" max="100" step="1">
           </p>
+          <br>
+          <p class="fontColor">文字の塗りつぶし</p>
         </div>
         <div class="colExample">
           <span class="colExample_r"></span>
