--- a/public/index.html
+++ b/public/index.html
@@ -58,9 +58,15 @@
           <br>
         </div>
         <div class="colExample">
-          <span class="colExample_r"></span>
-          <span class="colExample_g"></span>
-          <span class="colExample_b"></span>
+          <span class="colExample_r">
+            <input type="range" id="angHue" value="0" min="0" max="360" step="1">
+          </span>
+          <span class="colExample_g">
+            <input type="range" id="smiHue" value="280" min="0" max="360" step="1">
+          </span>
+          <span class="colExample_b">
+            <input type="range" id="neuHue" value="190" min="0" max="360" step="1">
+          </span>
         </div>
 
       </div>
