--- a/public/index.html
+++ b/public/index.html
@@ -59,13 +59,16 @@
         </div>
         <div class="colExample">
           <span class="colExample_r">
-            <input type="range" id="angHue" value="0" min="0" max="360" step="1">
+            <p class="hue_str">angry</p>
+            <input class="hue_slider" type="range" id="angHue" value="0" min="0" max="360" step="1">
           </span>
           <span class="colExample_g">
-            <input type="range" id="smiHue" value="280" min="0" max="360" step="1">
+            <p class="hue_str">neutral</p>
+            <input class="hue_slider" type="range" id="neuHue" value="280" min="0" max="360" step="1">
           </span>
           <span class="colExample_b">
-            <input type="range" id="neuHue" value="190" min="0" max="360" step="1">
+            <p class="hue_str">smile</p>
+            <input class="hue_slider" type="range" id="smiHue" value="190" min="0" max="360" step="1">
           </span>
         </div>
 
