--- a/public/index.html
+++ b/public/index.html
@@ -83,20 +83,23 @@
       <button id="send">send</button>
     </div>
 
-    <!-- --------パス-------- -->
-    <div class="unyounyo"">
-      <svg id=" svg" xmlns=" http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-      viewBox="0 0 1376.23 404.66">
-      <clipPath id="clip-path" transform="translate(0.42 -22)">
-        <rect class="cls-1" width="1374" height="423" />
-      </clipPath>
-      <path class="st0"
-        d="M-.42,426.66c77-6,146.91-25.47,219.42-54.5,42.07-16.84,137.6-26.34,182-27.24,46.8-.95,92.59,21.95,139,28.25,49.29,6.69,80.44-14.27,130-19.17,1.49,1.54-2.23,1.15,0,0,106.64-55.24,196.6-94.57,312.51-90.82,28.38.91,56.47,4.49,84.7,7.77,26.19,3,53.61,4.74,79-5.18,50-19.51,69.07-80.49,98.17-127.34,33-53.17,79.25-94,130.9-116.43q-1.4,170,.48,339.93c.35,30.82-2.28,30.25-1.78,61.07"
-        transform="translate(0.42 -22)" />
-      </svg>
-    </div>
-
   </div>
+
+  <!-- --------パス-------- -->
+  <svg id="svg" xmlns=" http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+  viewBox="0 0 1376.23 404.66">
+    <path class = "st0">
+      <animate dur="20s" repeatCount="indefinite" attributeName="d" attributeType="XML" values="
+      M0,30.5093V170H1363l2-130.8065s-110.7264,79.9836-303,0c-137-56.99-317-40.7074-395,9.77-77.8622,50.388-206,51.5627-331-7.5987C213.8152-16.4645,51-7.4843,0,30.5093Z;
+      
+      M0,41.9246V181.4153H1363l2-130.8065s-137-108.1935-243-8.1935c-114.8384,108.3381-266-2-345-18-90.8986-18.41-254.86,102.864-380,44C110-66.5847,154,144.4153,0,41.9246Z;
+
+      M0,34.2365V173.7273H1363l2-130.8065s-117,21.8065-243-8.1935c-153.5833-36.5675-276-47-345-18-85.5,35.9346-247.9045,91.6633-380,44C300,25.7273,148,.7273,0,34.2365Z;
+      
+      M0,30.5093V170H1363l2-130.8065s-110.7264,79.9836-303,0c-137-56.99-317-40.7074-395,9.77-77.8622,50.388-206,51.5627-331-7.5987C213.8152-16.4645,51-7.4843,0,30.5093Z;">
+      </animate>
+    </path>
+  </svg>
 
   <!-- --------チャット-------- -->
   <div class="main">
